fixed text overflow issue with horizontal scroll

--- a/IMD2009A/portfolio_project/Artfolio/static/Artfolio/css/explore.css
+++ b/IMD2009A/portfolio_project/Artfolio/static/Artfolio/css/explore.css
@@ -34,12 +34,12 @@
         justify-content: center;
         padding-top: 15px;
         padding-bottom: 10px;
-        width: 100%;
     }
 
 
     .filters a
     {
+        flex-shrink: 0;
         background-color: #fff;
         color: black;
         padding: 10px 18px;
@@ -98,11 +98,13 @@
         .filters
         {
             overflow-x: auto;
+            width: 100%
         }
 
         .filters a
         {
-           padding: 10px 18px;
+            padding: 8px 16px;
+            font-size: 20px;
         }
     }
 
